nginx-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-http
