nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-node
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: nginx-http
