nginx-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: "87.249.54.49"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-http
            port:
              number: 80
