nginx-ingress.yaml
# clean previous configs
# kubectl delete -A ValidatingWebhookConfiguration ingress-nginx-admission
# and probably allow 8443 port
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: butakov.su
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
            path: /


#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: nginx-ingress
#  namespace: default
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    cert-manager.io/cluster-issuer: letsencrypt-prod
##    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#spec:
#  tls:
#    - hosts:
#        - butakov.su  # Replace with your domain
#      secretName: tls-secret  # Kubernetes secret containing TLS cert and key
#  rules:
#    - host: butakov.su  # Replace with your domain
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: nginx-service
#                port:
#                  number: 80
